test_suite/alan-2022-examples/passing/000460_deriv.alan
source q function m0() begin p[true] := 13 end begin relax end
